chore: pipeline generator with docker

--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -15,3 +15,10 @@
   entry: hooks/pipeline-generator.sh
   language: script
   pass_filenames: false
+
+- id: pipeline-generator-docker
+  name: pipeline-generator
+  description: Generate ci config automatically.
+  entry: hooks/pipeline-generator-docker.sh
+  language: script
+  pass_filenames: false
