--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -17,7 +17,7 @@
   pass_filenames: false
 
 - id: pipeline-generator-docker
-  name: pipeline-generator
+  name: pipeline-generator-docker
   description: Generate ci config automatically.
   entry: hooks/pipeline-generator-docker.sh
   language: script
